--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <header>
             <div class="header-content">
                 <div class="header-overlay"></div>
-                <h1>15315 Santella Court Rancho Peñasquitos, San Diego, CA</h1>
+                <h1>  Address, CA</h1>
             </div>
             <div class="header-bottom">
                 <div class="agent-info">
@@ -45,7 +45,7 @@
         <main>
             <section id="info">
                 <h2>房产信息</h2>
-                <p>欢迎来到这栋位于备受欢迎的Rancho Peñasquitos社区的令人惊叹的4卧3卫房屋。这处精心维护的房产提供宽敞的平面布局、更新的厨房和一个适合娱乐的大后院。</p>
+                <p>欢迎来到这栋位于备受欢迎的社区的令人惊叹的4卧3卫房屋。这处精心维护的房产提供宽敞的平面布局、更新的厨房和一个适合娱乐的大后院。</p>
             </section>
 
             <section id="photoPlayer">
@@ -60,10 +60,10 @@
             <section id="details">
                 <h2>房产详情</h2>
                 <div class="property-details">
-                    <h3>$1,599,000</h3>
+                    <h3>$000000000</h3>
                     <div class="address">
                         <i data-lucide="map-pin"></i>
-                        <span>15315 Santella Court, Rancho Peñasquitos, San Diego, CA 92129</span>
+                        <span>Addressssssssss!!!!!!!!</span>
                     </div>
                     <div class="features">
                         <div><i data-lucide="bed"></i> <span>4 卧室</span></div>
