--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="header-content">
-                    <h3 data-translate="title">15315 Santella Court</h3>
+                    <h3 data-translate="title">ADDRESSSSSSSSSSSS</h3>
                 </div>
                 <div class="social-share">
                     <button aria-label="在Facebook上分享"><i data-lucide="facebook"></i></button>
@@ -91,7 +91,7 @@
         <main>
             <section id="info">
                 <h2 data-translate="info">房产信息</h2>
-                <p data-translate="propertyInfo">欢迎来到这栋位于备受欢迎的Rancho Peñasquitos社区的令人惊叹的4卧3卫房屋。这处精心维护的房产提供宽敞的平面布局、更新的厨房和一个适合娱乐的大后院。</p>
+                <p data-translate="propertyInfo">欢迎来到这栋位于备受欢迎的社区的令人惊叹的4卧3卫房屋。这处精心维护的房产提供宽敞的平面布局、更新的厨房和一个适合娱乐的大后院。</p>
             </section>
 
             <section id="photoPlayer">
@@ -109,12 +109,12 @@
                     <div class="detail-item">
                         <img src="statics/images/icons/price_tag.svg" alt="tag">
                         <span>LIST PRICE</span>
-                        <strong>$6,895,000</strong>
+                        <strong>$$$$$$$$$$$$$$$$</strong>
                     </div>
                     <div class="detail-item">
                        <img src="statics/images/icons/book.svg" alt="tag">
                         <span>MLS NUMBER</span>
-                        <strong>ML81983140</strong>
+                        <strong>NNNNNNNNNNNNNNNNN</strong>
                     </div>
                     <div class="detail-item">
                         <img src="statics/images/icons/bed.svg" alt="tag">
@@ -134,17 +134,17 @@
                     <div class="detail-item">
                         <img src="statics/images/icons/ruler.svg" alt="tag">
                         <span>SQUARE FEET</span>
-                        <strong>6,194</strong>
+                        <strong>999,999</strong>
                     </div>
                     <div class="detail-item">
                         <img src="statics/images/icons/calendar.svg" alt="tag">
                         <span>YEAR BUILT</span>
-                        <strong>2014</strong>
+                        <strong>2024</strong>
                     </div>
                     <div class="detail-item">
                         <img src="statics/images/icons/size.svg" alt="tag">
                         <span>LOT SIZE</span>
-                        <strong>74923</strong>
+                        <strong>9999999</strong>
                     </div>
                 </div>
                 <hr/>
@@ -210,8 +210,8 @@
 <footer>
     <div class="footer-content">
         <img src="path/to/equal-housing-opportunity-logo.png" alt="Equal Housing Opportunity" class="eho-logo">
-        <p>Proudly created by Beyond RE Marketing / Chris Ricketts</p>
-        <p>All information deemed reliable but not guaranteed. | © 2024 Beyond RE Marketing, Inc — All rights reserved. | Use of this website is subject to our terms of use.</p>
+        <p>INFO</p>
+        <p>INFO</p>
     </div>
 </footer>
 </html>
