--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
                     <div class="detail-item">
                         <img src="statics/images/icons/price_tag.svg" alt="tag">
                         <span>LIST PRICE</span>
-                        <strong>$$$$$$$$$$$$$$$$</strong>
+                        <strong>10,000,999</strong>
                     </div>
                     <div class="detail-item">
                        <img src="statics/images/icons/book.svg" alt="tag">
                         <span>MLS NUMBER</span>
-                        <strong>NNNNNNNNNNNNNNNNN</strong>
+                        <strong>123456789</strong>
                     </div>
                     <div class="detail-item">
                         <img src="statics/images/icons/bed.svg" alt="tag">
@@ -144,7 +144,7 @@
                     <div class="detail-item">
                         <img src="statics/images/icons/size.svg" alt="tag">
                         <span>LOT SIZE</span>
-                        <strong>9999999</strong>
+                        <strong>99,999</strong>
                     </div>
                 </div>
                 <hr/>
